--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "prettier": "^1.17.0"
   },
   "dependencies": {
+    "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
