add more auth and refactoring

--- a/config.env
+++ b/config.env
@@ -2,3 +2,8 @@ NODE_ENV=development
 PORT=3000
 DATABASE=mongodb+srv://akbar:<PASSWORD>@cluster0.chkyei5.mongodb.net/rental?retryWrites=true
 DATABASE_PASSWORD=akbar123
+
+JWT_SECRET=akbar-vallen-banendr-arif-rangga
+JWT_EXPIRES_IN=1d
+
+JWT_COOKIE_EXPIRES = 1
