added functionality to send reset password Email

--- a/config.env
+++ b/config.env
@@ -7,3 +7,10 @@ JWT_SECRET=akbar-vallen-banendr-arif-rangga
 JWT_EXPIRES_IN=1d
 
 JWT_COOKIE_EXPIRES = 1
+
+SMTP_HOST=smtp.mailtrap.io
+SMTP_PORT=2525
+SMTP_EMAIL=7905bd2468b0ce
+SMTP_PASSWORD=26f7c230e71351
+FROM_EMAIL=noreply@renmo.io
+FROM_NAME=RenMo
