--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.8.0",
     "validator": "^13.7.0"
   },
   "engines": {
