refactoring for sendEmail

--- a/config.env
+++ b/config.env
@@ -9,8 +9,8 @@ JWT_EXPIRES_IN=1d
 JWT_COOKIE_EXPIRES = 1
 
 SMTP_HOST=smtp.mailtrap.io
-SMTP_PORT=2525
+SMTP_PORT=587
 SMTP_EMAIL=7905bd2468b0ce
 SMTP_PASSWORD=26f7c230e71351
-FROM_EMAIL=noreply@renmo.io
+FROM_EMAIL=ranggakitty65@gmail.com
 FROM_NAME=RenMo
